--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ artifacts {
     archives sourceJar
     archives javadocJar
 }
-task jars(dependsOn: ['jar', 'sourceJar'], description: 'Build jar & source jar') << {}
+//task jars(dependsOn: ['jar', 'sourceJar'], description: 'Build jar & source jar') << {}
 
 
 //--------------------
@@ -136,5 +136,5 @@ uploadArchives {
 //--------------------
 // Util methods
 //--------------------
-task wrapper(type: Wrapper, description: 'Generate the Gradle Wrapper') { gradleVersion = '1.3' }
+//task wrapper(type: Wrapper, description: 'Generate the Gradle Wrapper') { gradleVersion = '1.3' }
 
